--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,7 @@
 <script src="scripts/app.js"></script>
 <script src="scripts/lib/utils.js"></script>
 <script src="scripts/controllers/main.js"></script>
+<script src="scripts/controllers/profile.js"></script>
 
 <!-- endbuild -->
 </body>
