specs and other checks in code

--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
 <![endif]-->
 
 <!-- Top Navigation -->
-<div class="navbar" bs-navbar>
+<div class="navbar" xbs-navbar>
   <div class="navbar-inner">
     <a class="brand" href="#/">SBJS.org</a>
     <ul class="nav">
