refactor auth as a service.

--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
 <![endif]-->
 
 <!-- Top Navigation -->
-<div class="navbar" bs-navbar>
+<div class="navbar" xbs-navbar>
   <div class="navbar-inner">
     <a class="brand" href="#/">SBJS.org</a>
     <ul class="nav">
@@ -83,6 +83,7 @@
 <script src="scripts/controllers/main.js"></script>
 <script src="scripts/controllers/profile.js"></script>
 <script src="scripts/controllers/members.js"></script>
+<script src="scripts/services/auth.js"></script>
 
 <!-- endbuild -->
 </body>
