--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,8 @@
       <!-- Issue filed on GH @ https://github.com/mgcrea/angular-strap/issues/208 -->
       <li data-match-route="/profile"><a href="#/profile">Profile</a></li>
       <li data-match-route="/members"><a href="#/members">Members</a></li>
+      <li data-match-route="/members"><a href="#/registration">Become a Member</a></li>
+
     </ul>
   </div>
 </div>
@@ -84,6 +86,7 @@
 <script src="scripts/controllers/profile.js"></script>
 <script src="scripts/controllers/members.js"></script>
 
+<script src="scripts/controllers/registration.js"></script>
 <!-- endbuild -->
 </body>
 </html>
