nav 'become a member' route fix

--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,7 @@
       <!-- Issue filed on GH @ https://github.com/mgcrea/angular-strap/issues/208 -->
       <li data-match-route="/profile"><a href="#/profile">Profile</a></li>
       <li data-match-route="/members"><a href="#/members">Members</a></li>
-      <li data-match-route="/members"><a href="#/registration">Become a Member</a></li>
+      <li data-match-route="/registration"><a href="#/registration">Become a Member</a></li>
 
     </ul>
   </div>
