--- a/app/index.html
+++ b/app/index.html
@@ -42,8 +42,8 @@
       <!-- Issue filed on GH @ https://github.com/mgcrea/angular-strap/issues/208 -->
       <li data-match-route="/profile"><a href="#/profile">Profile</a></li>
       <li data-match-route="/members"><a href="#/members">Members</a></li>
+      <li data-match-route="/fire"><a href="#/fire">Fire</a></li>
       <li data-match-route="/registration"><a href="#/registration">Become a Member</a></li>
-
     </ul>
   </div>
 </div>
@@ -77,6 +77,9 @@
 <script src="bower_components/angular-strap/dist/angular-strap.js"></script>
 <script src="bower_components/jquery/jquery.js"></script>
 <script src="bower_components/underscore/underscore.js"></script>
+<script src="https://cdn.firebase.com/v0/firebase.js"></script>
+<script src="bower_components/angular-fire/angularFire.js"></script>
+
 <!-- endbuild -->
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -88,6 +91,7 @@
 <script src="scripts/services/auth.js"></script>
 
 <script src="scripts/controllers/registration.js"></script>
+<script src="scripts/controllers/fire.js"></script>
 <!-- endbuild -->
 </body>
 </html>
